--- a/src/common.blocks/answer-card/m.answerCard.css
+++ b/src/common.blocks/answer-card/m.answerCard.css
@@ -32,6 +32,11 @@
     }
 
     .answer-card__best-answer-label {
-        line-height: 20px;
+        line-height: 18px;
+    }
+
+    
+    .best-answer-toggler__content {
+        font-size: 12px;
     }
 }
