--- a/src/common.blocks/enter-question/enterQuestion.css
+++ b/src/common.blocks/enter-question/enterQuestion.css
@@ -12,7 +12,7 @@
 
 .enter-question-wrapper__input {
 	flex             : 1 1 auto;
-	height           : 100%;
+	height           : 50px;
 	border           : 0;
 	border-radius    : 25px;
 	font-family      : var(--font-montserrat);
@@ -20,7 +20,7 @@
 	background-color : var(--background-color-gray-3);
 	pointer-events   : none;
 	padding          : 0 24px;
-	line-height      : 60px;
+	line-height      : 50px;
 	margin-right     : 17px;
 	cursor           : pointer;
 }
