--- a/src/common.blocks/enter-question/m.enterQuestion.css
+++ b/src/common.blocks/enter-question/m.enterQuestion.css
@@ -6,6 +6,8 @@
     }
 
     .enter-question-wrapper__input {
+        height       : 36px;
+        line-height  : 36px;
         padding      : 0 20px;
         font-size    : 12px;
         margin-right : 8px;
